<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 ArrowOS

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--PreferenceCategory
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"-->
    <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_kcal"
            android:key="kcal_enable"
            android:summary="@string/kcal_enable_summary"
            android:title="@string/kcal_enable_title" />
        <Preference
            android:icon="@drawable/ic_reset"
            android:key="reset_default_button"
            android:summary="@string/reset_default_button_summary"
            android:title="@string/reset_default_button_title" />

        <PreferenceCategory
            android:key="kcal_rgb_preference_category"
            android:title="@string/kcal_rgb_preference_category_title">

        <SeekBarPreference
            android:defaultValue="256"
            android:dependency="kcal_enable"
            android:layout_height="10dp"
            android:icon="@drawable/ic_seek_red"
            android:key="red_slider"
            android:max="256" />

        <SeekBarPreference
            android:defaultValue="256"
            android:dependency="kcal_enable"
            android:layout_height="10dp"
            android:icon="@drawable/ic_seek_green"
            android:key="green_slider"
            android:max="256" />

        <SeekBarPreference
            android:defaultValue="256"
            android:dependency="kcal_enable"
            android:layout_height="10dp"
            android:icon="@drawable/ic_seek_blue"
            android:key="blue_slider"
            android:max="256" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="kcal_calibration_preference_category"
        android:title="@string/kcal_calibration_preference_category_title">

        <SeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enable"
            android:layout_height="10dp"
            android:key="saturation_slider"
            android:max="383"
            android:title="@string/saturation_slider_title" />
        <SeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enable"
            android:layout_height="10dp"
            android:key="contrast_slider"
            android:max="383"
            android:title="@string/contrast_slider_title" />
        </PreferenceCategory>
</PreferenceScreen>

